Update README with JavaFX interface documentation