@@ -2,36 +2,55 @@
 
 ## 📋 Project Overview
 
-The **Vehicle Fleet Management System** is a Java application developed to manage a rental vehicle fleet. It allows users to load vehicle data from a CSV file, manage rentals and returns, track vehicle maintenance, generate fleet statistics, and create summary reports.
+The **Vehicle Fleet Management System** is a Java application developed to manage a rental vehicle fleet.
+
+The application allows users to:
+
+- Load vehicle data from a CSV file
+- Manage vehicle rentals and returns
+- Track vehicle maintenance operations
+- Generate fleet statistics
+- Create summary reports
+- Visualize fleet information through a JavaFX graphical interface
 
 This project was developed as part of the **UA3 – Advanced Object-Oriented Programming** assignment.
 
 ---
 
-## 🎯 Objectives
+# 🎯 Objectives
 
-The application demonstrates the use of object-oriented programming concepts by implementing:
+The main objective of this project is to apply advanced Object-Oriented Programming concepts.
 
-* Inheritance
-* Abstract classes
-* Interfaces
-* Polymorphism
-* ArrayList collections
-* Custom exceptions
-* CSV file reading
-* File generation (TXT report)
-* SOLID principles (SRP and OCP)
+The application demonstrates:
+
+- Inheritance
+- Abstract classes
+- Interfaces
+- Polymorphism
+- Method overriding
+- Encapsulation
+- ArrayList collections
+- Custom exceptions
+- CSV file reading and writing
+- TXT report generation
+- SOLID principles (SRP and OCP)
+- JavaFX graphical user interface
 
 ---
 
-## 📁 Project Structure
+# 📁 Project Structure
 
 ```text
 UA3_Vehicle_Fleet_Management_System
 │
 ├── src
+│   │
 │   ├── app
-│   │   └── Main.java
+│   │   ├── Main.java
+│   │   └── FleetApplication.java
+│   │
+│   ├── controller
+│   │   └── VehicleController.java
 │   │
 │   ├── model
 │   │   ├── Vehicle.java
@@ -70,99 +89,243 @@ UA3_Vehicle_Fleet_Management_System
 
 ---
 
-## 🚀 Features
+# 🚀 Features
 
-### Vehicle Management
+## 🚗 Vehicle Management
 
-* Manage multiple vehicle types:
+The system manages different types of vehicles:
 
-  * Car
-  * SUV
-  * Truck
-* Store vehicle information:
+- Car
+- SUV
+- Truck
 
-  * ID
-  * Brand
-  * Model
-  * Year
-  * Mileage
-  * Availability
+Each vehicle contains:
 
-### Rental Management
+- Vehicle ID
+- Brand
+- Model
+- Manufacturing year
+- Mileage
+- Availability status
 
-* Rent a vehicle
-* Return a vehicle
-* Calculate rental cost using polymorphism
-* Prevent renting unavailable vehicles
+The vehicle hierarchy is based on inheritance:
 
-### Maintenance Management
-
-* Detect vehicles requiring maintenance
-* Report maintenance operations
-* Complete maintenance tasks
-
-### CSV Data Management
-
-* Load vehicle data from a CSV file
-* Validate vehicle information
-* Ignore invalid records
-* Handle custom exceptions
-
-### Statistics
-
-Generate useful fleet statistics:
-
-* Total number of vehicles
-* Average mileage
-* Estimated rental revenue
-* Number of vehicles by type
-* Vehicles requiring maintenance
-
-### Report Generation
-
-Generate a text report containing:
-
-* Fleet summary
-* Statistics
-* Maintenance information
+```text
+              Vehicle
+                 |
+      -----------------------
+      |          |          |
+     Car        SUV       Truck
+```
 
 ---
 
-## 🛠 Technologies Used
+# 🚘 Rental Management
 
-* Java
-* Object-Oriented Programming (OOP)
-* Java Collections (`ArrayList`)
-* File I/O (`BufferedReader`, `FileWriter`)
-* Exception Handling
-* Git & GitHub
+The rental module allows:
+
+- Renting a vehicle
+- Returning a vehicle
+- Checking vehicle availability
+- Calculating rental costs
+
+Rental cost calculation uses polymorphism.
+
+Each vehicle type provides its own implementation:
+
+```java
+calculateRentalCost(int days)
+```
 
 ---
 
-## 📂 CSV File Format
+# 🛠 Maintenance Management
 
-Example:
+The maintenance module provides:
+
+- Detection of vehicles requiring maintenance
+- Maintenance reporting
+- Maintenance completion tracking
+
+Example rule:
+
+```text
+Mileage > 50000 km
+
+        ↓
+
+Maintenance required
+```
+
+---
+
+# 📂 CSV Data Management
+
+The application loads vehicle data from:
+
+```text
+data/vehicles.csv
+```
+
+CSV processing includes:
+
+- Reading vehicle information
+- Creating vehicle objects
+- Validating input data
+- Detecting invalid records
+- Handling custom exceptions
+
+
+Example CSV format:
 
 ```csv
 id,type,brand,model,year,mileage,rented,extra
+
 V001,Car,Toyota,Corolla,2022,15000,false,4
+
 V002,SUV,BMW,X5,2021,35000,false,true
+
 V003,Truck,Ford,F150,2020,70000,true,2.5
 ```
 
-The project also includes invalid data to demonstrate custom exception handling.
+The CSV file contains invalid data to demonstrate error handling.
 
 ---
 
-## ▶️ How to Compile
+# 📊 Statistics
 
-```bash
-javac -d bin src/interfaces/*.java src/model/*.java src/exceptions/*.java src/service/*.java src/app/*.java
+The system generates fleet statistics:
+
+- Total number of vehicles
+- Average mileage
+- Estimated rental revenue
+- Number of vehicles by type
+- Vehicles requiring maintenance
+- Fleet utilization information
+
+---
+
+# 📄 Report Generation
+
+The application generates a TXT report:
+
+```text
+reports/fleet_report.txt
+```
+
+The report contains:
+
+- Fleet summary
+- Vehicle statistics
+- Maintenance information
+- Rental information
+
+---
+
+# 🖥 JavaFX Graphical Interface
+
+The project includes a JavaFX graphical interface connected to the existing backend.
+
+The graphical application provides:
+
+- Vehicle table visualization
+- CSV data loading
+- Display of vehicle information:
+
+  - ID
+  - Type
+  - Brand
+  - Model
+  - Year
+  - Mileage
+  - Availability
+
+
+The architecture follows a layered design:
+
+```text
++----------------------+
+| JavaFX Application   |
++----------------------+
+           |
+           v
++----------------------+
+| VehicleController    |
++----------------------+
+           |
+           v
++----------------------+
+| FleetManager         |
++----------------------+
+           |
+           v
++----------------------+
+| CsvManager           |
++----------------------+
+           |
+           v
++----------------------+
+| vehicles.csv         |
++----------------------+
 ```
 
 ---
 
-## ▶️ How to Run
+# 🏗 SOLID Principles Applied
+
+## Single Responsibility Principle (SRP)
+
+Each class has a specific responsibility:
+
+| Class | Responsibility |
+|---|---|
+| FleetManager | Manage fleet vehicles |
+| RentalManager | Manage rentals |
+| MaintenanceManager | Manage maintenance |
+| CsvManager | Load CSV data |
+| StatisticsManager | Calculate statistics |
+| ReportManager | Generate reports |
+
+---
+
+## Open/Closed Principle (OCP)
+
+The application is designed to allow adding new vehicle types without modifying existing classes.
+
+Example:
+
+Adding a motorcycle:
+
+```java
+public class Motorcycle extends Vehicle
+```
+
+The existing services continue to work without modification.
+
+---
+
+# 🛠 Technologies Used
+
+- Java 17
+- JavaFX 17
+- Object-Oriented Programming (OOP)
+- ArrayList Collections
+- File I/O
+- CSV Processing
+- Exception Handling
+- Git & GitHub
+
+---
+
+# ▶️ Compile Console Application
+
+```bash
+javac -d bin src/interfaces/*.java src/model/*.java src/exceptions/*.java src/service/*.java src/app/Main.java
+```
+
+---
+
+# ▶️ Run Console Application
 
 ```bash
 java -cp bin app.Main
@@ -170,12 +333,31 @@ java -cp bin app.Main
 
 ---
 
-## 📊 Example Output
+# ▶️ Run JavaFX Application
+
+JavaFX SDK 17 is required.
+
+Compile:
+
+```bash
+javac --module-path PATH_TO_JAVAFX/lib --add-modules javafx.controls -d bin src/**/*.java
+```
+
+Run:
+
+```bash
+java --module-path PATH_TO_JAVAFX/lib --add-modules javafx.controls -cp bin app.FleetApplication
+```
+
+---
+
+# 📊 Example Output
 
 ```text
 ===== VEHICLE FLEET MANAGEMENT SYSTEM =====
 
 Vehicles loaded : 14
+
 
 ===== RENTAL MANAGEMENT =====
 
@@ -183,7 +365,9 @@ Vehicle V001 rented successfully.
 
 Rental price : 250.0 $
 
+
 Vehicle V001 returned successfully.
+
 
 ===== STATISTICS =====
 
@@ -194,19 +378,20 @@ Estimated revenue : 5450.0 $
 
 ---
 
-## 🏗 Object-Oriented Concepts Applied
+# 📌 Future Improvements
 
-* Inheritance
-* Abstract Class
-* Interfaces
-* Method Overriding
-* Polymorphism
-* Encapsulation
-* Custom Exceptions
-* SOLID Principles
+Possible future enhancements:
+
+- Dashboard statistics
+- Vehicle search functionality
+- Add / Edit / Delete vehicles
+- Complete rental interface
+- Maintenance interface
+- Database integration
+- User authentication
 
 ---
 
-## 📜 License
+# 📜 License
 
 This project is provided for educational purposes.
